# hwpc-sensor

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CODEOWNERS  Dockerfile  Jenkinsfile  LICENSE  README.md  control  launch_sensor.sh
.github/: dependabot.yml
.github/chglog/: config.yml
.github/workflows/: build.yml  codeql-analysis.yml  release.yml  release_ci.yml
cmake/: FindLibPFM.cmake
docker/: entrypoint.sh
src/: capabilities.c  capabilities.h  cgroups.c  cgroups.h  config.c  config.h  config_cli.c  config_cli.h  config_json.c  config_json.h  csv.c  csv.h  docker.c  docker.h  events.c  events.h  hwinfo.c  hwinfo.h  mongodb.c  mongodb.h  payload.c  payload.h  perf.c  perf.h  pmu.c  pmu.h  report.c  report.h  rlimits.c  rlimits.h  sensor.c  storage.c  storage.h  storage_csv.c  storage_csv.h  storage_daemon.c  storage_daemon.h  storage_deamon.c  storage_deamon.h  storage_mongodb.c  (+16 more)
